# wshash

./: .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  appveyor.yml  compat.go  setup.py  wshash.go  wshash_test.go  wshashc.go
js/: test.js  wshash.js
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/libwshash/: io.c  io.h  io_posix.c  io_win32.c  mmap.h
src/python/: core.c
test/c/: CMakeLists.txt  test.cpp
test/python/: requirements.txt  test_pywshash.py
